--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,8 @@
-key: value
+AUGMENTATION: True
+IMAGE_SIZE: [224, 224, 3] # as per VGG 16 model / varies for resnet and other ML models
+BATCH_SIZE: 16
+INCLUDE_TOP: False  # removes the last dense layers in the model
+EPOCHS: 1
+CLASSES: 2
+WEIGHTS: imagenet #trained on imagenet dataset
+LEARNING_RATE: 0.01
