--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,4 +10,10 @@ data_ingestion:
 prepare_base_model:
   root_dir: artifacts/prepare_base_model
   base_model_path: artifacts/prepare_base_model/base_model.h5
-  update_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+
+
+
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
