--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ src/cnnClassifier/entity/__pycache__
 src/cnnClassifier/constants/__pycache__
 src/cnnClassifier/config/__pycache__
 src/cnnClassifier/components/__pycache__
-logs
+logs/*
